2004-07-22  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>  <bfriesen@simple.dallas.tx.us>

	* demo/Makefile.am (AUTOMAKE_OPTIONS): Added nostdinc in order
	to avoid accidentally using magick/list.h when including <list>.
	* tests/Makefile.am (AUTOMAKE_OPTIONS): Added nostdinc in order
	to avoid accidentally using magick/list.h when including <list>.
	* tests/readWriteBlob.cpp: If MISSING_STD_IOS_BINARY is defined,
	then ios::binary is not used.  Use simple ifstream rather than
	std::ifstream since we are already using the std namespace.

2004-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Include.h: Disable unavoidable warnings under
	Visual C++ when instantiating STL templates within DLL
	code. Consensus from postings on the net is that as long as the
	same C++ compiler is used throughout, these warnings are of no
	concern.

2004-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (coderInfoList): Make error reporting a bit
	more lenient so that if an error occurs while loading a module it
	is not reported as an exception unless no coders were found at
	all.

2004-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (clipMask): Use GetImageClipMask.

2004-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/CoderInfo.cpp (CoderInfo): Sense of isReadable() and
	isWritable() was inverted.

2004-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Include.h: <inttypes.h> is not used. Inclusion
	removed.

2004-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Thread.cpp (lock): Have not been successful with using
	MsgWaitForMultipleObjects() reliably, so back out usage of it for
	now.

2004-03-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Thread.cpp (lock): For MsgWaitForMultipleObjects, monitor
	state change only.  Otherwise lock may deadlock.

2004-03-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
