@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2004-08-17  Volker Lukas  &lt;vlukas@gmx.de&gt;
+
+<UL>
+  <LI> lib/Drawable.cpp: Fixes to ensure that drawable objects remain
+        coherent even if an exception is thrown within the assignment
+        operator.
+
+</UL>
+<p>
 2004-07-22  Bob Friesenhahn &lt;bfriesen@simple.dallas.tx.us&gt;  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
